force-app/main/default/objects/cgcloud__Promotion_Push_Status__c/cgcloud__Promotion_Push_Status__c.object-meta.xml
<CustomObject>
    <description>Contains for each push process an entry containing the status and statistics for the push.</description>
    <label>Promotion Push Status</label>
    <nameField>
        <displayFormat>PPS-{0000000}</displayFormat>
        <label>Promotion Push Status Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promotion Push Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>