force-app/main/default/objects/cgcloud__Promotion_Push_Status__c/fields/cgcloud__Calculation_End_Time__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Calculation_End_Time__c</fullName>
    <description>Time when the parent promotion calculation chain has finished for this promotion.</description>
    <label>Calculation End Time</label>
    <type>DateTime</type>
</CustomField>