force-app/main/default/objects/cgcloud__Promotion_Push_Status__c/fields/cgcloud__Children_Calculation_End_Time__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Children_Calculation_End_Time__c</fullName>
    <description>Time when the Children Calculation Job is finished for this parent promotion</description>
    <label>Children Calculation End Time</label>
    <type>DateTime</type>
</CustomField>