force-app/main/default/objects/cgcloud__Promotion_Push_Status__c/fields/cgcloud__Distribution_End_Time__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Distribution_End_Time__c</fullName>
    <description>Time when the distribution job has finished for this parent promotion.</description>
    <label>Distribution End Time</label>
    <type>DateTime</type>
</CustomField>