force-app/main/default/objects/cgcloud__Promotion_Push_Status__c/fields/cgcloud__Entry_Time__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Entry_Time__c</fullName>
    <description>Time when the push was started.</description>
    <label>Entry Time</label>
    <type>DateTime</type>
</CustomField>