force-app/main/default/objects/cgcloud__Promotion_Push_Status__c/fields/cgcloud__Error_Ocurred__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Error_Ocurred__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag that indicates, if an error occured within the chain.</description>
    <label>Error Ocured</label>
    <type>Checkbox</type>
</CustomField>