force-app/main/default/objects/cgcloud__Promotion_Push_Status__c/fields/cgcloud__Metric_Preparation_End_Time__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Metric_Preparation_End_Time__c</fullName>
    <description>Time when the prepare metric job has finished for this parent promotion.</description>
    <label>Metric Preparation End Time</label>
    <type>DateTime</type>
</CustomField>