force-app/main/default/objects/cgcloud__Promotion_Push_Status__c/fields/cgcloud__Nr_Of_Child_Promotions__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Nr_Of_Child_Promotions__c</fullName>
    <description>Number of child promotions considered in this push process.</description>
    <label>Nr Of Child Promotions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>