force-app/main/default/objects/cgcloud__Promotion_Push_Status__c/fields/cgcloud__Parent_Promotion__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Parent_Promotion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Promotion</label>
    <referenceTo>cgcloud__Promotion__c</referenceTo>
    <relationshipLabel>Promotion Push Status</relationshipLabel>
    <relationshipName>Promotion_Push_Status</relationshipName>
    <type>Lookup</type>
</CustomField>