force-app/main/default/objects/cgcloud__Promotion_Push_Status__c/fields/cgcloud__Status__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial</fullName>
            </value>
            <value>
                <fullName>Syncing</fullName>
            </value>
            <value>
                <fullName>Calculating</fullName>
            </value>
            <value>
                <fullName>InProgress</fullName>
            </value>
            <value>
                <fullName>Done</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>