force-app/main/default/objects/cgcloud__Promotion_Push_Status__c/fields/cgcloud__Sync_End_Time__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sync_End_Time__c</fullName>
    <description>Time when the Synchronisation from parent to child promotions is finished.</description>
    <label>Sync End Time</label>
    <type>DateTime</type>
</CustomField>