force-app/main/default/objects/cgcloud__Promotion_Push_Status__c/fields/cgcloud__Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Transaction_Id__c</fullName>
    <description>Transaction id under which the push was executed.</description>
    <label>Transaction Id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>