force-app/main/default/objects/cgcloud__Promotion_Push_Status__c/fields/cgcloud__Upload_Kpis_End_Time__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Upload_Kpis_End_Time__c</fullName>
    <description>Time when the Upload Kpi Job is finished for this parent promotion.</description>
    <label>Upload Kpis End Time</label>
    <type>DateTime</type>
</CustomField>